# ViconStreamer

./: CMakeLists.txt  README.md  doc.md  test  test.cpp
client/: client.cpp
include/vicon_streamer/: vicon_streamer.h
src/: server.cpp  vicon_streamer.cpp
